# toronto-bids

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  config.yaml  requirements.txt  rfp_scraper_config.json
scrapers/: .env.example  .gitignore  Dockerfile  README.md  TextExtraction.ipynb  ariba_driver.py  azurefileshare.py  build_docker.sh  build_text_dump.ipynb  config.json  environment.yml  filemanage.py  google_drive.py  inflate_zips.ipynb  manage_data.ipynb  open_data.py  pyproject.toml  requirements.txt  rfp_scraper.ipynb  rfp_scraper.py  scrape_rfp.py  secret_manager.py  slack.py  temp.html  transmit_json.py
scrapers/ariba/: FixStructure.ipynb  RemoveJunkText.ipynb  TextExtraction.ipynb  ariba_driver.py  drive.py  environment_ubuntu_2304.yml  filemanage.py  google_drive.py  inflate_zips.ipynb  manage_data.ipynb  open_data.py  rfp_logger.py  rfp_scraper.ipynb  rfp_scraper.py  transmit_json.py
scrapers/citysite/: bidparse.php  bidparse.py
scrapers/docker/: Dockerfile  ariba_driver.py  azurefileshare.py  entrypoint.sh  environment.yml  filemanage.py  google_drive.py  rfp_scraper.py  rfpkeys.py  transmit_json.py
scrapers/tests/: conftest.py  test_agencies.py  test_agency_report.py  test_amount.py  test_amount_labels.py  test_ariba.py  test_ariba_attachments.py  test_ariba_bridge.py  test_award_line_key.py  test_award_summary.py  test_bd_bid_tables.py  test_bid_award_panel.py  test_bid_supplier_link.py  test_bids.py  test_bids_tenders.py  test_call_number.py  test_capital_pipeline.py  test_ckan.py  test_cli.py  test_cli_agencies.py  test_cli_titles.py  test_composite_awards.py  test_composite_reports.py  test_council_download.py  (+25 more)
(+285 files in other folders)
