[project]
name = "toronto-bids"
version = "0.1.0"
description = "Scraper for City of Toronto procurement data"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "lxml>=6.1.1",
    "playwright>=1.61.0",
]

[project.scripts]
tb = "toronto_bids.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toronto_bids"]
