[project]
name = "toronto-bids"
version = "0.1.0"
description = "Scraper for City of Toronto procurement data"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "lxml>=6.1.1",
    "pdfplumber>=0.11.10",
    "pyarrow>=17",
    # Headed-Chromium capture is no longer optional: `tb nightly` runs the Ariba-attachment
    # capture (#117) and the TMMIS council/agency board scrapes in-line, so playwright is a
    # mandatory dependency (Akamai blocks headless, so a real browser is unavoidable).
    # pyvirtualdisplay runs Chromium under Xvfb on a headless server; python-dotenv reads the
    # supplier login from scrapers/.env (#117). The browser BINARY is still a separate,
    # non-pip step: `uv run playwright install chromium` (+ its system libs).
    "playwright>=1.61.0",
    "pyvirtualdisplay>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
tb = "toronto_bids.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toronto_bids"]
